# FinTech

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  .sonarignore  ARQUITECTURE.md  CLEAN_STRUCTURE.md  CONTEXTO_NEGOCIO.md  CONTRIBUTION.md  GIT_REORGANIZATION_SUMMARY.md  HISTORIAS_USUARIO.md  PLAN_IMPLEMENTACION.md  PRODUCT.md  README.md  TEST_PLAN.md  coverage.xml  docker-compose.microservices.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  sonar-project.properties  test-auth-flow.ps1  test-device-id.ps1  test-user-filtering.ps1  view-structure.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  tests.yml
docs/: ARQUITECTURE.md  CLEANUP_SUMMARY.md  CONTEXTO_NEGOCIO.md  DOCKER_COMPOSE_USAGE.md  FEATURE_USER_TRANSACTIONS.md  FLUJO_TDD_BDD.md  GIT_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  INDICE_MAESTRO_TDD_BDD.md  INSTALL.md  LOCATION_RULES_GUIDE.md  MICROSERVICES_ARCHITECTURE.md  OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  REORGANIZATION_GUIDE.md  SECURITY_CONFIGURATION.md  SYSTEM_STATUS.html  TDD_GUIDE.md  TEST_CASES.md  TEST_CASES_GHERKIN.md  TEST_PLAN.md  USER_AUTHENTICATION_IMPLEMENTATION.md  USER_HISTORY.md  WIREFRAMES.md
frontend/: code.html
frontend/admin-dashboard/: demo_tx.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/admin-dashboard/src/: App.test.tsx  App.tsx
frontend/streamlit/: Dockerfile  streamlit_app.py
frontend/user-app/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/user-app/src/: App.test.tsx  App.tsx  main.tsx
infrastructure/: README.md
infrastructure/cache/redis/: README.md  (+1 more)
scripts/: run-tests-docker.ps1  run-tests-unified.ps1  run-tests.ps1  run-tests.sh  seed-data.ps1  seed-mongodb.js  start-all-services.ps1  test-dynamic-rules.ps1  test-edit-rules.ps1  test-gps-location.ps1  update-fields.js  update-reasons.js  validate-location-rules.ps1  validate_architecture.py
services/api-gateway/: Dockerfile  README.md
services/fraud-evaluation-service/: Dockerfile  README.md  pyproject.toml
services/fraud-evaluation-service/src/: __init__.py  adapters.py  config.py
services/fraud-evaluation-service/src/application/: __init__.py  admin_auth_use_cases.py  auth_use_cases.py  interfaces.py  use_cases.py
services/fraud-evaluation-service/src/domain/: __init__.py  models.py
services/fraud-evaluation-service/src/domain/strategies/: __init__.py  amount_threshold.py  base.py  device_validation.py  location_check.py  rapid_transaction.py  unusual_time.py
services/fraud-evaluation-service/src/infrastructure/: __init__.py  admin_repository.py  auth_service.py  config.py  user_repository.py
services/fraud-evaluation-service/src/infrastructure/adapters/: __init__.py  mongodb.py  rabbitmq.py  redis.py
services/fraud-evaluation-service/src/infrastructure/api/: __init__.py  main.py  schemas.py
services/shared/: adapters.py  config.py
services/worker-service/: Dockerfile  README.md
tests/: __init__.py  conftest.py
tests-e2e/: .gitignore  README.md  package.json  playwright.config.ts  run-all-tests.ps1  run-tests.ps1  setup-and-run.ps1  test-request.json  tsconfig.json
tests-e2e/fixtures/: rules.json  transactions.json
tests-e2e/pages/: BasePage.ts  RulesPage.ts  TransactionsPage.ts  UserDashboardPage.ts
tests-e2e/screenshots/: README.md
tests-e2e/tasks/: CreateRule.ts  NavigateTo.ts  ReviewTransaction.ts  ValidateTransaction.ts
tests-e2e/tests/: 00-connectivity.spec.ts  admin-dashboard.spec.ts  api-integration.spec.ts  chatbot.spec.ts  hu-001-reception.spec.ts  hu-002-audit.spec.ts  hu-003-007-fraud-strategies.spec.ts  hu-008-009-config.spec.ts  hu-012-manual-review.spec.ts  hu-013-user-dashboard.spec.ts  transactions.spec.ts  user-app.spec.ts
tests/fixtures/: test_low_risk.json  test_transaction_simple.json
tests/integration/: test_admin_auth_endpoints.py  test_api_endpoints.py  test_api_live.py
tests/unit/: test_100_percent.py  test_adapters.py  test_admin_auth_use_cases.py  test_admin_model.py  test_admin_repository.py  test_amount_threshold.py  test_auth_use_cases.py  test_config.py  test_coverage_100.py  test_device_validation_strategy.py  test_domain_models.py  test_final_coverage.py  test_fraud_strategies.py  test_location_edge_cases.py  test_location_strategy.py  test_models.py  test_rapid_transaction.py  test_rapid_transaction_strategy.py  test_routes.py  test_unusual_time_extended.py  test_unusual_time_strategy.py  test_use_cases.py  test_use_cases_complete.py  test_worker.py
(+96 files in other folders)
