# HUMAN REVIEW (Maria Paula Gutierrez):
# La IA sugirió usar pip normal.
# Elegí Poetry porque maneja mejor las versiones de librerías
# y evita problemas de compatibilidad.
[tool.poetry]
name = "fraud-detection-engine"
version = "0.1.0"
description = "Motor de detección de fraude con Clean Architecture y SOLID"
authors = ["María Gutiérrez <maria.gutierrezn@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.1"
starlette = "0.35.1"
httpx = "0.27.2"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pymongo = "^4.6.0"
redis = "^5.0.1"
pika = "^1.3.2"
python-dotenv = "^1.0.0"
geopy = "^2.4.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.0"
python-multipart = "^0.0.6"
aiosmtplib = "^3.0.1"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"
pytest-mock = "^3.12.0"
black = "^24.1.1"
pylint = "^3.0.3"
mypy = "^1.8.0"
httpx = "0.27.2"

[tool.poetry.group.demo.dependencies]
streamlit = "^1.30.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# HUMAN REVIEW (Maria Paula Gutierrez):
# Configuré pytest para ejecutar tests unitarios y de integración.
# El coverage mínimo es 70% para asegurar calidad del código.
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    --cov=services
    --cov-report=html
    --cov-report=term-missing
    --cov-report=xml
    --cov-fail-under=70
    -v
    --strict-markers
    --tb=short
"""
asyncio_mode = "auto"
markers = [
    "unit: Tests unitarios para Domain y Application",
    "integration: Tests de integración con API endpoints",
    "slow: Tests que tardan más de 1 segundo",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
max-line-length = 100
disable = ["C0114", "C0115", "C0116"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
